--- a/vercel.json
+++ b/vercel.json
@@ -1,39 +1,28 @@
 
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "framework": "nextjs",
-  "functions": {
-    "src/app/api/**/*.ts": {
-      "maxDuration": 60
-    }
-  },
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@supabase_url",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@supabase_anon_key",
-    "GEMINI_API_KEY": "@gemini_api_key",
-    "GOOGLE_CLOUD_PROJECT_ID": "@google_cloud_project_id",
-    "VERTEX_AI_LOCATION": "@vertex_ai_location"
-  },
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
-  ],
+  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
   "headers": [
     {
       "source": "/(.*)",
       "headers": [
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        }
+        { "key": "X-Content-Type-Options", "value": "nosniff" },
+        { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
+        { "key": "X-XSS-Protection", "value": "1; mode=block" }
       ]
     }
-  ]
+  ],
+  "public": true,
+  "functions": {
+    "src/app/api/chat/route.ts": {
+      "memory": 1280,
+      "maxDuration": 30
+    }
+  },
+  "cache": {
+    "staticAssets": {
+      "maxAge": 2592000,
+      "swr": 86400
+    }
+  }
 }
